syntax = "proto3";

package order;

message OrderRequest{
  string customerName = 1;
  string item = 2;
  int32 quantity = 3;
}

message OrderResponse{
  string confirmationMessage = 1;
}

message OrderDetailsRequest{
string orderId = 1;

}

message OrderDetails{
string customerName = 1;
string item = 2;
int32 quantity = 3;
}


service OrderService{
  rpc PlaceOrder (OrderRequest) returns (OrderResponse);
  rpc GetOrderDetails(OrderDetailsRequest) returns (OrderDetails);
}
